--- a/Ejercicios de Clase/01 - Selectores/Ejercicio09 2 version.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio09 2 version.html
@@ -5,9 +5,7 @@
 		<script>
 		$(document).ready(function(){			
 			$("tr:odd td").mouseenter(function(){
-        $(this).text(function(i, origText){
-				return origText + "(*)";
-				});
+        $(this).append("*");
 			});
 		});
 		</script>
