--- a/Ejercicios de Clase/01 - Selectores/Ejercicio10 2 version.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio10 2 version.html
@@ -5,7 +5,7 @@
 		<script>
 		$(document).ready(function(){			
 			$("#aplicar").click(function(){
-        $("p.titulo").animate({width:"200px"},1000);
+        $(".titulo").width(200);
 			});
 		});
 		</script>
