--- a/Ejercicios de Clase/01 - Selectores/Ejercicio02.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio02.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="jquery-3.1.1.slim.min.js"></script>
 		<script>
 		$(document).ready(function(){
 			$("button").click(function(){
-				$("#capa > .listamenu").hide();
+				$("#capa .listamenu").hide();
 			});
 		});
 		</script>
