--- a/Ejercicios de Clase/01 - Selectores/Ejercicio04.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio04.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="jquery-3.1.1.slim.min.js"></script>
 		<script>
 		$(document).ready(function(){
-			$("p > #misdatos").hide(function(){
+			$("p #misdatos").hide(function(){
 			});
 			
 			$("#hobby").click(function(){
-				$("p > #misdatos").show();
+				$("p #misdatos").show();
 			});
 		});
 		</script>
