--- a/Ejercicios de Clase/01 - Selectores/Ejercicio05.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio05.html
@@ -4,8 +4,10 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script>
 		$(document).ready(function(){			
-			$("#alumno_3").show(function(){
-				$("#enlace").text($("#alumno_3").attr("href"));
+			$("#boton").click(function(){
+				$("#alumno_3").show(function(){
+					$("#enlace").text($("#alumno_3").attr("href"));
+				});
 			});
 		});
 		</script>
@@ -16,5 +18,6 @@
 
 		<div id="enlace"></div>
 
+		<button id="boton">Mostrar</button>
 	</body>
 </html>
