--- a/Ejercicios de Clase/01 - Selectores/Ejercicio06.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio06.html
@@ -4,7 +4,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script>
 		$(document).ready(function(){			
-			$("#micapa > p:first").click(function(){
+			$("#micapa p:first").click(function(){
         $(this).text("Primero");
     });
 		});
