--- a/Ejercicios de Clase/01 - Selectores/Ejercicio07.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio07.html
@@ -5,7 +5,7 @@
 		<script>
 		$(document).ready(function(){			
 			$("#cambiar").click(function(){
-        $("#noticias > a:last").attr("href", "http://info.html");
+        $("#noticias a:last").attr("href", "http://info.html");
     });
 		});
 		</script>
