--- a/Ejercicios de Clase/01 - Selectores/Ejercicio08.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio08.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="jquery-3.1.1.slim.min.js"></script>
 		<script>
 		$(document).ready(function(){			
 			$("#cambiar").click(function(){
-        $(".noticias > #quince").css("color" , "red");
+        $(".noticias span:eq(14)").css("color" , "red");
     });
 		});
 		</script>
@@ -27,7 +27,7 @@
 			<span>hielos</span></br>
 			<span>hielos</span></br>
 			<span>hielos</span></br>
-			<span id="quince">hielos</span></br>
+			<span>hielos</span></br>
 		</div>
 		
 		<button id="cambiar">Cambiar href</button>
