--- a/Ejercicios de Clase/01 - Selectores/Ejercicio16.html
+++ b/Ejercicios de Clase/01 - Selectores/Ejercicio16.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="jquery-3.1.1.slim.min.js"></script>
 		<script>
 		$(document).ready(function(){			
 			$('button[name=cancelar]').click(function(){
