--- a/Ejercicios de Clase/04-Tres en raya/tresenraya.html
+++ b/Ejercicios de Clase/04-Tres en raya/tresenraya.html
@@ -15,7 +15,7 @@ Capa texto donde se muestra el turno del jugador y los avisos
     <meta author="Jesús Caballero Corpas">
     <title>Tres En Raya</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/funciones.js"></script>
 </head>
     
