--- a/Ejercicios de Clase/05-Juego de la oca/juegoOcaLineal.html
+++ b/Ejercicios de Clase/05-Juego de la oca/juegoOcaLineal.html
@@ -21,7 +21,7 @@ Versión 1 . Hacer el tablero lineal.
     <meta author="Jesús Caballero Corpas">
     <title>Juego de la Oca Lineal</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/funciones.js"></script>
 </head>
     
